--- a/style/scss/partials/_base.scss
+++ b/style/scss/partials/_base.scss
@@ -17,7 +17,7 @@ a:link { text-decoration: none; } // Removes underline from hyperlinks
 
 h1 {
 	font-family: 'Unica One', cursive; // h1 typeface
-	font-size: 14vh;
+	font-size: 12vmin;
 	text-transform: uppercase;
 	text-align: center;
 	color:	$brown25;
