--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5843,7 +5843,7 @@ a:link {
 
 h1 {
   font-family: 'Unica One', cursive;
-  font-size: 14vh;
+  font-size: 12vmin;
   text-transform: uppercase;
   text-align: center;
   color: #464439; }
@@ -6087,9 +6087,6 @@ h2 {
   width: 200px; }
 
 @media all and (orientation: portrait) {
-  .h1-main {
-    font-size: 7vmin; }
-
   .choices {
     flex-direction: column; }
 
@@ -6098,8 +6095,5 @@ h2 {
 
   .bioware-style-conversation-wheel {
     display: none; } }
-@media all and (orientation: landscape) {
-  .h1-main {
-    font-size: 7vw; } }
 
 /*# sourceMappingURL=style.css.map */
