--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -7,7 +7,7 @@
 
 .box__1--blue50 {
 	@include 			flex1;		// container fills all space
-	background-color:	$blue50;	// background Blue
+	background-color:	$blue50;	// background blue
 	border-radius:  	1rem;		// rounded corners
 	box-shadow:			0 .5rem 0 0 $blue10;	// vertical, no blur, dark blue
 	flex-direction: 	column;		// flexbox stacks vertically in a column
@@ -32,9 +32,12 @@
 	margin-bottom:		1rem;						// bottom margin set to keep from touching choices
 }
 
-.chat-cloud {
-	@include	flex2;		// 2/3 of the vertical
-	padding:	2rem 0 1rem;	// 2 on the top 10 on the bottom
+.chat {
+	@include			flex2;			// 2/3 of the vertical
+	padding:			3rem;			// 2 on the top 10 on the bottom
+	background-color:	$brown75;		// white was overpowering
+	margin:				2rem 0 1rem;	// pulls chat clouc away from the edges
+	border-radius:  	1rem;			// rounded corners are fly again
 }
 	
 
