--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5890,10 +5890,13 @@ h2 {
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   margin-bottom: 1rem; }
 
-.chat-cloud {
+.chat {
   display: flex;
   flex: 2;
-  padding: 2rem 0 1rem; }
+  padding: 3rem;
+  background-color: #c6c3b9;
+  margin: 2rem 0 1rem;
+  border-radius: 1rem; }
 
 .choices {
   display: flex;
