--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -39,6 +39,7 @@
 	border-radius:		1rem;			// rounded corners are fly 
 	margin:				2rem 0 1rem;	// pulls chat clouc away from the edges
 	padding:			3rem;			// 2 on the top 10 on the bottom}
+}
 	
 
 .choices {
