--- a/style/scss/import.scss
+++ b/style/scss/import.scss
@@ -3,6 +3,7 @@
 @import 'partials/mixins';
 @import 'partials/color-generator';
 @import 'partials/base';
+@import 'partials/type';
 @import 'partials/flex';
 @import 'partials/svg';
 @import 'partials/media-queries';
