--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -38,7 +38,7 @@
 	background-color:	$brown75;		// white was 
 	border-radius:		1rem;			// rounded corners are fly 
 	margin:				2rem 0 1rem;	// pulls chat clouc away from the edges
-	padding:			3rem;			// 2 on the top 10 on the bottom}
+	// padding:			3rem;			// note that this causes text to break the box
 }
 	
 
@@ -83,90 +83,13 @@
 	}
 }
 
-.column {
-	flex-direction: column; // sets flexbox to stack boxes vertically in a column.
-}
-
-.overflow-hidden {
-	overflow: hidden;
-}
-
-.z10 {
-	z-index: 10;
-}
-
-
-
-////////////////////////////////////////////////////////////////////////////////
-// ALIGNMENT                                                                  //
-////////////////////////////////////////////////////////////////////////////////
-
-.horizontal-center  { justify-content:   center; }
-.horizontal-right   { justify-content: flex-end; }
-
-.vertical-top       { align-items:   flex-start; }
-.vertical-center    { align-items:       center; }
-.vertical-bottom    { align-items:     flex-end; }
-
-.alignself-end      { align-self:      flex-end; }
-
-.rotate90 { transform: rotate(90deg); }
-
-////////////////////////////////////////////////////////////////////////////////
-// PADDING                                                                    //
-////////////////////////////////////////////////////////////////////////////////
-
-.pad1  { padding: .1rem; }
-.pad2  { padding: .2rem; }
-.pad3  { padding: .3rem; }
-.pad4  { padding: .4rem; }
-.pad5  { padding: .5rem; }
-.pad6  { padding: .6rem; }
-.pad7  { padding: .7rem; }
-.pad8  { padding: .8rem; }
-.pad9  { padding: .9rem; }
-.pad10 { padding:  1rem; }
-.pad20 { padding:  2rem; }
-
-.pad10--top		{ padding-top:		1rem; } // padding top
-.pad20--top		{ padding-top:		2rem; } // padding 
-.pad10--bottom	{ padding-bottom:	1rem; } // padding bottom
-.pad20--bottom	{ padding-bottom:	2rem; } // padding bottom
-.pad20--right	{ padding-right:    2rem; } // padding top
-.pad20--left	{ padding-left: 	2rem; } // padding bottom
-
-.margin3 { margin: .5rem; }
-.margin10-bottom { margin: 0 0 1rem; }
-
-////////////////////////////////////////////////////////////////////////////////
-// SHADOWS                                                                    //
-////////////////////////////////////////////////////////////////////////////////
-
-.shadow { box-shadow: 0 .2rem .1rem .1rem $lightness--30; }    
-
-
-////////////////////////////////////////////////////////////////////////////////
-// ROUND CORNERS                                                              //
-////////////////////////////////////////////////////////////////////////////////               
-
-.border-radius5  { border-radius: .5rem; }
-.border-radius10 { border-radius:  1rem; } // border relative to root (14px)
-
-.border-topleft-radius5     	{ border-top-left-radius:     .5rem; }
-.border-topright-radius5    	{ border-top-right-radius:    .5rem; }
-.border-bottomleft-radius5  	{ border-bottom-left-radius:  .5rem; }
-.border-bottomright-radius5 	{ border-bottom-right-radius: .5rem; }
-.border-topleft-radius10     	{ border-top-left-radius:      1rem; }
-.border-topright-radius10    	{ border-top-right-radius:     1rem; }
-.border-bottomleft-radius10  	{ border-bottom-left-radius:   1rem; }
-.border-bottomright-radius10 	{ border-bottom-right-radius:  1rem; }
 
 ////////////////////////////////////////////////////////////////////////////////
 // SVG                                                                        //
 ////////////////////////////////////////////////////////////////////////////////
 
 .svg {
-  @extend .alignself-end;
+  align-self:      flex-end; 
 }
 
 .svg-absolute {
