refactored adventure, added author to index

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5851,7 +5851,7 @@ a:link {
   text-align: center;
   color: #464439; }
 
-h2 {
+.h2__choices {
   margin: 0;
   padding: 0;
   font-weight: normal;
