--- a/style/scss/partials/_base.scss
+++ b/style/scss/partials/_base.scss
@@ -4,13 +4,13 @@
 * { box-sizing: border-box }
 
 html {
-	font-size: 14px; // all rems are relative to this number
-	height: 100%; // sets the root container height to 100% of the viewport
+	font-size: 14px;						/// all rems are relative to this number
+	height: 100%;							/// sets the root container height to 100% of the viewport
 }
 
 body {
-	margin: 0; // gets rid of the default margins on the top and left
-	height: 100%; // sets the root container height to 100% of the root
+	margin: 0;								/// gets rid of the default margins on the top and left
+	height: 100%;							/// sets the root container height to 100% of the root
 }
 
 a:link { text-decoration: none; } // Removes underline from hyperlinks
