--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5932,12 +5932,21 @@ a:link {
   -webkit-flex: 2;
   -ms-flex: 2;
   flex: 2;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
   background-color: #c6c3b9;
   border-radius: 1rem;
-  margin: 2rem 0 1rem; }
+  padding: 3vmin;
+  margin: 3vmin 0; }
+
+.chat__cloud {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .choices {
   display: -webkit-flex;
