contact updated styles

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5851,6 +5851,13 @@ a:link {
   color: #464439;
   font-size: 12vmin; }
 
+.h1__10 {
+  font-family: 'Unica One', cursive;
+  text-transform: uppercase;
+  text-align: center;
+  color: #464439;
+  font-size: 10vmin; }
+
 .h1__8 {
   font-family: 'Unica One', cursive;
   text-transform: uppercase;
