--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5865,6 +5865,13 @@ a:link {
   color: #464439;
   font-size: 8vmin; }
 
+.h1__6 {
+  font-family: 'Unica One', cursive;
+  text-transform: uppercase;
+  text-align: center;
+  color: #464439;
+  font-size: 7vmin; }
+
 .h2__3 {
   font-family: 'Lato', sans-serif;
   margin: 0;
@@ -5974,6 +5981,25 @@ a:link {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #52637a;
+  margin: .3rem;
+  box-shadow: 0 0.3rem 0 0 #29313d;
+  border-radius: .5rem;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: #a3b0c2; }
+
+.choices__button--2 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
