--- a/style/css/style.css
+++ b/style/css/style.css
@@ -6020,7 +6020,8 @@ a:link {
   -ms-flex: 1;
   flex: 1; }
 
-.choices__button:hover {
+.choices__button:hover,
+.choices__button--2:hover {
   background-color: #47566b;
   box-shadow: none; }
 
