--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5927,17 +5927,17 @@ a:link {
   -ms-flex-direction: column;
   flex-direction: column; }
 
-.scene {
+.scene__index {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex: 2;
   -ms-flex: 2;
   flex: 2;
-  background-color: #3d4a5c;
   border-radius: .5rem;
   box-shadow: inset 0 0.5rem 0 0 #29313d;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  background-color: #3d4a5c; }
 
 .chat {
   display: -webkit-flex;
