--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -1,8 +1,8 @@
 .box {
-	background-color:	$brown15;	// dark brown (15 brightness)
-	display:			flex;		// flexbox parent. all grown up and in charge.
-	height:				100%;		// makes for no scrolling
-	padding:			1rem;		// 14px
+	background-color:	$brown15;	/// dark brown (15 brightness)
+	display:			flex;		/// flexbox parent. all grown up and in charge.
+	height:				100%;		/// makes for no scrolling
+	padding:			1rem;		/// 14px
 }
 
 .pad10 {
@@ -10,92 +10,96 @@
 }
 
 .box__1--blue50 {
-	@include 			flex1;		// container fills all space
-	background-color:	$blue50;	// background blue
-	border-radius:		1rem;		// rounded corners
-	box-shadow:			0 .5rem 0 0 $blue10;	// vertical, no blur, dark blue
-	flex-direction:		column;		// flexbox stacks vertically in a column
-	padding:			1rem;		// sets the size of the frame
+	@include 			flex1;		/// container fills all space
+	background-color:	$blue50;	/// background blue
+	border-radius:		1rem;		/// rounded corners
+	box-shadow:			0 .5rem 0 0 $blue10;	/// vertical, no blur, dark blue
+	flex-direction:		column;		/// flexbox stacks vertically in a column
+	padding:			1rem;		/// sets the size of the frame
 }
 
 .box__1--column {
-	@include		flex1;	// container fills all space
-	flex-direction:	column;	// vertical stack of scene then choices
+	@include		flex1;	/// container fills all space
+	flex-direction:	column;	/// vertical stack of scene then choices
 }
 
 .box__4--column {
-	@include		flex4;	// container fills all space
-	flex-direction:	column;	// vertical stack of scene then choices
+	@include		flex4;	/// container fills all space
+	flex-direction:	column;	/// vertical stack of scene then choices
 }
 
-.scene {
-	@include			flex2;						// 2/3 of the vertical
-	background-color:	$blue30;					// background a bit darker due to being inset
-	border-radius:		.5rem;						// smaller corners for inner containers, .5 instead of 1
-	box-shadow:			inset 0 0.5rem 0 0 $blue20;	// dark blue inner (inset) drop shadow
-	margin-bottom:		1rem;						// bottom margin set to keep from touching choices
+@mixin scene {
+	@include			flex2;						/// 2/3 of the vertical
+	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
+	box-shadow:			inset 0 0.5rem 0 0 $blue20;	/// dark blue inner (inset) drop shadow
+	margin-bottom:		1rem;						/// bottom margin set to keep from touching choices
 }
+
+	.scene__index {
+		@include			scene;		/// Sets the scene flex, border radius, shadow and margins
+		background-color:	$blue30;	/// background a bit darker due to being inset
+	}
 
 .chat {
-	@include			flex2;			// 2/3 of the vertical
-	background-color:	$brown75;		// white was so overpowering
-	border-radius:		1rem;			// rounded corners are fly - static corners
-	padding:			3vmin;			// used to keep h1 text from fighting with the edges - dynamic padding
-	margin:				3vmin 0;		// dynamic margins
+	@include			flex2;			/// 2/3 of the vertical
+	background-color:	$brown75;		/// white was so overpowering
+	border-radius:		1rem;			/// rounded corners are fly - static corners
+	padding:			3vmin;			/// used to keep h1 text from fighting with the edges - dynamic padding
+	margin:				3vmin 0;		/// dynamic margins
 }
 
 .chat__cloud {
-	@include			flex1;			// fill the chat box (minus the padding)
-	align-items:		center;			// centers text vertically. *flex
+	@include			flex1;			/// fill the chat box (minus the padding)
+	align-items:		center;			/// centers text vertically. *flex
 }
 	
 
 .choices {
-	@include			flex1;						// container fills all space
+	@include			flex1;						/// container fills all space
 	background-color:	$blue30;
-	border-radius:		.5rem;						// smaller corners for inner containers, .5 instead of 1
-	box-shadow:			inset 0 0.5rem 0 0 $blue20;	// dark blue inner (inset) drop shadow
-	padding:			1rem;						// sets the size of the frame
-	// _meda-queries.scss orientation changes this to column
+	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
+	box-shadow:			inset 0 0.5rem 0 0 $blue20;	/// dark blue inner (inset) drop shadow
+	padding:			1rem;						/// sets the size of the frame
+	/// _meda-queries.scss orientation changes this to column
 }
 
 .choices__button {
-	@include			flex1; // button fills the box
-	align-items:		center;	// centers text on the y axis
+	@include			flex1; /// button fills the box
+	align-items:		center;	/// centers text on the y axis
 	background-color:	$blue40;
 	margin:				.3rem;
-	box-shadow:			0 0.3rem 0 0 $blue20;	// lower than choices to reflect less lighting, also not inset
+	box-shadow:			0 0.3rem 0 0 $blue20;	/// lower than choices to reflect less lighting, also not inset
 	border-radius:		.5rem;
-	justify-content:	center;	// centers text on the x axis
+	justify-content:	center;	/// centers text on the x axis
 	color:	$blue70;
 
 }
 
 .choices__button--2 {
-	@include			flex2; // button fills the box
-	align-items:		center;	// centers text on the y axis
+	@include			flex2; /// button fills the box
+	align-items:		center;	/// centers text on the y axis
 	background-color:	$blue40;
 	margin:				.3rem;
-	box-shadow:			0 0.3rem 0 0 $blue20;	// lower than choices to reflect less lighting, also not inset
+	box-shadow:			0 0.3rem 0 0 $blue20;	/// lower than choices to reflect less lighting, also not inset
 	border-radius:		.5rem;
-	justify-content:	center;	// centers text on the x axis
+	justify-content:	center;	/// centers text on the x axis
 	color:	$blue70;
 
 }
 
 .bioware-style-conversation-wheel {
-	@include	flex1;	// button fills the box
+	@include	flex1;	/// button fills the box
 
 }
 
 .choices__button:hover,
 .choices__button--2:hover {
 	background-color:	$blue35;
-	box-shadow:			none;	// removes the front of the button (dropshadow)
+	box-shadow:			none;	/// removes the front of the button (dropshadow)
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-// DISCARD WHEN DONE                                     //
+// DISCARD WHEN DONE                                 						  //
 ////////////////////////////////////////////////////////////////////////////////
 @for $flex-unit from 1 through 10 {
 	.flex#{$flex-unit} {
@@ -116,4 +120,5 @@
 	width: 200px;
 
 }
+
 
