--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5907,13 +5907,13 @@ a:link {
   flex: 4;
   flex-direction: column; }
 
-.scene {
+.scene__index {
   display: flex;
   flex: 2;
-  background-color: #3d4a5c;
   border-radius: .5rem;
   box-shadow: inset 0 0.5rem 0 0 #29313d;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  background-color: #3d4a5c; }
 
 .chat {
   display: flex;
