--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5885,9 +5885,6 @@ a:link {
   height: 100%;
   padding: 1rem; }
 
-.pad10 {
-  padding: 1rem; }
-
 .box__1--blue50 {
   display: flex;
   flex: 1;
@@ -5907,6 +5904,9 @@ a:link {
   flex: 4;
   flex-direction: column; }
 
+.pad10 {
+  padding: 1rem; }
+
 .scene__index {
   display: flex;
   flex: 2;
@@ -5914,6 +5914,13 @@ a:link {
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   margin-bottom: 1rem;
   background-color: #3d4a5c; }
+
+.scene__adventure {
+  display: flex;
+  flex: 2;
+  border-radius: .5rem;
+  box-shadow: inset 0 0.5rem 0 0 #29313d;
+  margin-bottom: 1rem; }
 
 .chat {
   display: flex;
