--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -1,16 +1,37 @@
-.box {
+///////////////////////////
+///	DECLARE FLEX MIXINS	///
+///////////////////////////
+
+@mixin flex1 {
+	display:	flex;	// so strong
+	flex:		1;		// relative unit of 1
+}
+
+@mixin flex2 {
+	display:	flex;	// so strong
+	flex:		2;		// relative unit of 1
+}
+
+@mixin flex4 {
+	display:	flex;	// so strong
+	flex:		4;		// relative unit of 1
+}
+
+///////////////////
+///	CONTAINERS	///
+///////////////////
+
+///	container__relative-flex-unit--modifier(color, direction, etc)
+
+.box {								///	block
 	background-color:	$brown15;	/// dark brown (15 brightness)
 	display:			flex;		/// flexbox parent. all grown up and in charge.
 	height:				100%;		/// makes for no scrolling
 	padding:			1rem;		/// 14px
 }
 
-.pad10 {
-	padding:			1rem;
-}
-
 .box__1--blue50 {
-	@include 			flex1;		/// container fills all space
+	@include			flex1;		/// container fills all space
 	background-color:	$blue50;	/// background blue
 	border-radius:		1rem;		/// rounded corners
 	box-shadow:			0 .5rem 0 0 $blue10;	/// vertical, no blur, dark blue
@@ -28,6 +49,15 @@
 	flex-direction:	column;	/// vertical stack of scene then choices
 }
 
+
+.pad10 {
+	padding:			1rem;
+}
+
+///////////////
+///	SCENES	///
+///////////////
+
 @mixin scene {
 	@include			flex2;						/// 2/3 of the vertical
 	border-radius:		.5rem;						/// smaller corners for inner containers, .5 instead of 1
@@ -36,8 +66,12 @@
 }
 
 	.scene__index {
-		@include			scene;		/// Sets the scene flex, border radius, shadow and margins
+		@include			scene;		///	sets the scene flex, border radius, shadow and bottom margin
 		background-color:	$blue30;	/// background a bit darker due to being inset
+	}
+
+	.scene__adventure {
+		@include	scene;	///	sets the scene flex, border radius, shadow and bottom margin
 	}
 
 .chat {
@@ -52,6 +86,10 @@
 	@include			flex1;			/// fill the chat box (minus the padding)
 	align-items:		center;			/// centers text vertically. *flex
 }
+
+///////////////
+///	CHOICES	///
+///////////////
 	
 
 .choices {
