--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5879,6 +5879,38 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
+.box1 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
+
+.box2 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2; }
+
+.box3 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3; }
+
+.box4 {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 4;
+  -ms-flex: 4;
+  flex: 4; }
+
 .box {
   background-color: #2a2922;
   display: -webkit-flex;
@@ -5949,7 +5981,7 @@ a:link {
   border-radius: .5rem;
   box-shadow: inset 0 0.5rem 0 0 #29313d;
   margin-bottom: 1rem;
-  background-color: #3d4a5c; }
+  background-color: #29313d; }
 
 .chat {
   display: -webkit-flex;
