--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5879,9 +5879,14 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.box1, .box1__astronaut-ryan {
+.box1, .box1__shell, .box1__astronaut-ryan {
   display: flex;
   flex: 1; }
+
+.box1__shell {
+  background-color: #2a2922;
+  height: 100%;
+  padding: 1rem; }
 
 .box1__astronaut-ryan {
   background-image: url(../../img/svg/space-adventure__astronaut-ryan.svg);
@@ -5900,12 +5905,6 @@ a:link {
 .box4 {
   display: flex;
   flex: 4; }
-
-.box {
-  background-color: #2a2922;
-  display: flex;
-  height: 100%;
-  padding: 1rem; }
 
 .box__1--blue50 {
   display: flex;
