--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5892,6 +5892,21 @@ a:link {
   height: 100%;
   padding: 1rem; }
 
+.box1__blue-frame {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-color: #667b99;
+  border-radius: 1rem;
+  box-shadow: 0 0.5rem 0 0 #14191f;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding: 1rem; }
+
 .box1__astronaut-ryan {
   background-image: url(../../img/svg/space-adventure__astronaut-ryan.svg);
   background-position: bottom;
@@ -5921,21 +5936,6 @@ a:link {
   -webkit-flex: 4;
   -ms-flex: 4;
   flex: 4; }
-
-.box__1--blue50 {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background-color: #667b99;
-  border-radius: 1rem;
-  box-shadow: 0 0.5rem 0 0 #14191f;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  padding: 1rem; }
 
 .box__1--column {
   display: -webkit-flex;
