--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5879,13 +5879,18 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.box1, .box1__shell, .box1__astronaut-ryan {
+.box1, .box1--column, .box1__shell, .box1__astronaut-ryan {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1; }
+
+.box1--column {
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
 
 .box1__shell {
   background-color: #2a2922;
@@ -5936,17 +5941,6 @@ a:link {
   -webkit-flex: 4;
   -ms-flex: 4;
   flex: 4; }
-
-.box__1--column {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column; }
 
 .box__4--column {
   display: -webkit-flex;
