--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -5848,29 +5848,44 @@ a:link {
   font-family: 'Unica One', cursive;
   text-transform: uppercase;
   text-align: center;
-  color: #464439;
+  margin: 0;
+  padding: 0;
   font-size: 12vmin; }
 
 .h1__10 {
   font-family: 'Unica One', cursive;
   text-transform: uppercase;
   text-align: center;
-  color: #464439;
+  margin: 0;
+  padding: 0;
   font-size: 10vmin; }
 
 .h1__8 {
   font-family: 'Unica One', cursive;
   text-transform: uppercase;
   text-align: center;
-  color: #464439;
+  margin: 0;
+  padding: 0;
   font-size: 8vmin; }
 
 .h1__6 {
   font-family: 'Unica One', cursive;
   text-transform: uppercase;
   text-align: center;
-  color: #464439;
-  font-size: 7vmin; }
+  margin: 0;
+  padding: 0;
+  font-size: 6vmin; }
+
+.h1__5, .h1__5--blue {
+  font-family: 'Unica One', cursive;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-size: 5vmin; }
+
+.h1__5--blue {
+  color: #29313d; }
 
 .h2__3 {
   font-family: 'Lato', sans-serif;
@@ -5958,10 +5973,33 @@ a:link {
   background-repeat: no-repeat;
   margin-top: 2vmin; }
 
-.scene__adventure--planet-comet-bg {
+.scene__adventure--planet-bg {
   display: flex;
   flex: 1;
-  background-image: url(../../img/svg/space-adventure__planet-comet.svg);
+  background-image: url(../../img/svg/space-adventure__planet.svg);
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.scene__adventure--comet-bg {
+  display: flex;
+  flex: 1;
+  background-image: url(../../img/svg/space-adventure__comet.svg);
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.scene__adventure--chat-cloud {
+  display: flex;
+  flex: 3;
+  align-items: center;
+  background-color: #8596ad;
+  border-radius: 1rem;
+  padding: 1vmin;
+  margin: 3vmin 0 3vmin 3vmin; }
+
+.scene__adventure--chat-arrow {
+  display: flex;
+  flex: 1;
+  background-image: url(../../img/svg/space-adventure__chat-arrow.svg);
   background-position: center;
   background-repeat: no-repeat; }
 
