removed unused svgs, updtated selector svg

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5894,7 +5894,7 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.box1, .box1--column, .box1__shell {
+.flex1, .flex1--column, .flex1__shell {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5902,17 +5902,17 @@ a:link {
   -ms-flex: 1;
   flex: 1; }
 
-.box1--column {
+.flex1--column {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column; }
 
-.box1__shell {
+.flex1__shell {
   background-color: #2a2922;
   height: 100%;
   padding: 1rem; }
 
-.box1__blue-frame {
+.flex1__blue-frame {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5927,7 +5927,7 @@ a:link {
   flex-direction: column;
   padding: 1rem; }
 
-.box2 {
+.flex2 {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5935,7 +5935,7 @@ a:link {
   -ms-flex: 2;
   flex: 2; }
 
-.box3 {
+.flex3 {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5943,7 +5943,7 @@ a:link {
   -ms-flex: 3;
   flex: 3; }
 
-.box4 {
+.flex4 {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5951,7 +5951,7 @@ a:link {
   -ms-flex: 4;
   flex: 4; }
 
-.box__4--column {
+.flex__4--column {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -6136,7 +6136,7 @@ a:link {
   background-color: #47566b;
   box-shadow: none; }
 
-.flex1 {
+.flex1, .flex1--column, .flex1__shell {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
